# statistical-arbitrage-bot

./: .env.example  .gitignore  README.md  pyproject.toml  results.csv  results_15m.csv  setup.py
.claude/: settings.local.json
config/: default.yaml
examples/: end_to_end.py
statarb/: __init__.py  cli.py
statarb/backtest/: __init__.py  costs.py  engine.py  metrics.py  vectorized.py  walkforward.py
statarb/core/: __init__.py  config.py  logging.py  secrets.py  types.py
statarb/data/: __init__.py  base.py  cache.py  ccxt_provider.py  resampler.py
statarb/execution/: __init__.py  alerts.py  base.py  ccxt_exec.py  paper.py  persistence.py
statarb/live/: __init__.py  dashboard.py  pair_manager.py  runner.py
statarb/risk/: __init__.py  limits.py  portfolio.py  position_sizing.py
statarb/scanner/: __init__.py  basket_scanner.py  pairs_scanner.py
statarb/signals/: __init__.py  base.py  bollinger.py  kalman.py  zscore.py
statarb/stats/: __init__.py  cointegration.py  hedge_ratio.py  mean_reversion.py  spread.py  stationarity.py
statarb/strategies/: __init__.py  base.py  pairs_trading.py  stat_arb_basket.py
statarb/universe/: __init__.py  filters.py
tests/: test_backtest.py  test_risk.py  test_scanner.py  test_stats.py
