[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statarb"
version = "0.1.0"
description = "Modular crypto statistical arbitrage toolkit: scanners, backtesters, live execution."
requires-python = ">=3.10"
authors = [{ name = "statarb" }]
readme = "README.md"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "pyarrow>=14",
    "ccxt>=4.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "typer>=0.12",
    "rich>=13.7",
    "joblib>=1.3",
    "filelock>=3.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "ruff>=0.4"]
plot = ["matplotlib>=3.8"]

[project.scripts]
statarb = "statarb.cli:app"

[tool.setuptools.packages.find]
include = ["statarb*"]

[tool.ruff]
line-length = 100
target-version = "py310"
